--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   http: ^1.3.0
   iconsax: ^0.0.8
   provider: ^6.1.4
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  cached_network_image: ^3.4.1
+  flutter_cache_manager: ^3.4.1
   smooth_page_indicator: ^1.2.1
   carousel_slider: ^5.0.0
 
